--- a/tour-management/frontend/src/styles/userhome/userhome.css
+++ b/tour-management/frontend/src/styles/userhome/userhome.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .background-container {
-  background-image: url('C:\Users\KaricharlaHarinadh\tour-management\frontend\src\assets\images\bg_image.jpg'); /* Add the path to your background image */
+  background-image: url('C:\Users\K harinadh sai\OneDrive\Desktop\tour-management\fswd_mini\tour-management\frontend\src\assets\images\wallpaper.jpg'); /* Add the path to your background image */
   background-size: cover;
   background-position: center center;
   height: 100vh;
